# fb2k_statistic

./: .gitignore  README.md  app.py  pyproject.toml
src/: core.py  models.py  utils.py
src/beefweb/: __init__.py  asyncsse.py  core.py  models.py
src/bfinterface/: asyncsse.py  core.py  models.py
src/statistic_collector/: __init__.py  core.py  models.py  utils.py
src/statistic_collector/beefweb/: core.py  models.py
